--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
         .navbar-toggle span {
             display: block;
-            width椒: 100%;
+            width: 100%; /* Düzeltme burada: "width椒" yerine "width" */
             height: 3px;
             background: var(--accent-color);
             position: absolute;
@@ -266,7 +266,7 @@
             clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
         }
 
-        /* Animated background grid */
+        /* Animated background background grid */
         .bg-grid {
             position: fixed;
             top: 0;
@@ -289,7 +289,7 @@
         @keyframes float {
             0%, 100% { transform: translateY(0px) rotate(0deg); }
             33% { transform: translateY(-20px) rotate(120deg); }
-            66% { transform: translateY(10px) \rotate(240deg); }
+            66% { transform: translateY(10px) rotate(240deg); }
         }
 
         /* Hero Section */
@@ -530,7 +530,7 @@
         }
 
         .card-subtitle {
-            font-size: 1.2km;
+            font-size: 1.2em;
             color: var(--text-secondary);
             margin-bottom: 10px;
         }
@@ -1306,8 +1306,8 @@
                     <p class="card-subtitle">TUBITAK-1501 Project</p>
                     <p class="card-date">2023</p>
                     <p class="card-description">
-					I am responsible for the web design of the TÜBİTAK-1501 supported project
-					titled “Reducing Carbon Emission in Residences”.
+                        I am responsible for the web design of the TÜBİTAK-1501 supported project
+                        titled “Reducing Carbon Emission in Residences”.
                     </p>
                 </div>
                 <div class="card">
@@ -1316,9 +1316,9 @@
                     <p class="card-subtitle"></p>
                     <p class="card-date">2025</p>
                     <p class="card-description">
-					Coded an interactive map-based web application for exploring locations
-					with sounds and visuals using HTML, CSS, and JavaScript.
-					Project website: maphonic.com
+                        Coded an interactive map-based web application for exploring locations
+                        with sounds and visuals using HTML, CSS, and JavaScript.
+                        Project website: maphonic.com
                     </p>
                 </div>
             </div>
@@ -1337,12 +1337,12 @@
                         LinkedIn.
                     </p>
                     <p class="card-description">
-                        <strong>Email:</strong> ege.veyisoglu.listd.yeditepe.edu.tr<br>
+                        <strong>Email:</strong> ege.veyisoglu@std.yeditepe.edu.tr<br>
                         <strong>Location:</strong> Maltepe, Istanbul
                     </p>
                     <div class="social-links">
-                        <a href="mailto:ege.veyisoglu.listd.yeditepe.edu.tr" class="social-link"><i class="fas fa-envelope"></i></a>
-                        <a href="https://linkedin.com/in/egreyyisoglu" class="social-link"><i class="fab fa-linkedin"></i></a>
+                        <a href="mailto:ege.veyisoglu@std.yeditepe.edu.tr" class="social-link"><i class="fas fa-envelope"></i></a>
+                        <a href="https://linkedin.com/in/egeveyisoglu" class="social-link"><i class="fab fa-linkedin"></i></a>
                     </div>
                 </div>
             </div>
